# pytest-testcontainers

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
pytest_testcontainers/: django_fixtures.py  django_mysql_fixtures.py  django_oracle_fixtures.py  django_postgres_fixtures.py  plugin.py
pytest_testcontainers/containers/: base.py  mysql.py  oracle.py  postgres.py
pytest_testcontainers_django_test/: settings_base.py  settings_mysql.py  settings_postgres.py
tests/: conftest.py  test_containers.py
